--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
             box-shadow: 0 0 8px rgba(0,0,0,0.1);
             border-radius: 6px;
         }
-        h1, h2, h3 {
+        h1{
+            color:black;
+        }
+        
+        h2, h3 {
             color: #002147;
         }
         .btn-container {
