--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             border-radius: 6px;
         }
         h1{
-            color:black;
+            color:white;
         }
         
         h2, h3 {
